# n34

./: .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  flake.nix  justfile  nostr-address  rustfmt.toml  tasks
docs/: SUMMARY.md  commands.md  index.html  reply.md
docs/issue/: close.md  list.md  new.md  reopen.md  resolve.md  view.md
docs/patch/: apply.md  close.md  draft.md  fetch.md  list.md  merge.md  reopen.md  send.md
docs/pr/: README.md  apply.md  close.md  draft.md  list.md  merge.md  new.md  reopen.md  update.md  view.md
docs/repo/: announce.md  state.md  view.md
docs/sets/: new.md  remove.md  update.md
src/: error.rs  main.rs  nostr_keyring.rs
src/cli/: common_commands.rs  config.rs  defaults.rs  macros.rs  mod.rs  options_state.rs  parsers.rs  reply.rs  traits.rs  types.rs  utils.rs
src/cli/commands/: mod.rs  reply.rs
src/cli/commands/config/: bunker.rs  keyring.rs  mod.rs  nip07.rs  pow.rs  relays.rs
src/cli/commands/issue/: close.rs  list.rs  mod.rs  new.rs  reopen.rs  resolve.rs  view.rs
src/cli/commands/patch/: apply.rs  close.rs  draft.rs  fetch.rs  list.rs  merge.rs  mod.rs  reopen.rs  send.rs  tests.rs
src/cli/commands/pr/: apply.rs  close.rs  draft.rs  list.rs  merge.rs  mod.rs  new.rs  reopen.rs  update.rs  view.rs
src/cli/commands/repo/: announce.rs  mod.rs  state.rs  view.rs
src/cli/commands/sets/: mod.rs  new.rs  remove.rs  show.rs  update.rs
src/cli/issue/: mod.rs  new.rs
src/cli/repo/: announce.rs  mod.rs  view.rs
src/nostr_utils/: mod.rs  traits.rs  utils.rs
