[package]
name         = "n34"
description  = "A CLI to interact with NIP-34 and other stuff related to codes in nostr"
version      = "0.2.0"
edition      = "2024"
license      = "GPL-3.0-or-later"
authors      = ["Awiteb <a@4rs.nl>"]
readme       = "README.md"
repository   = "https://git.4rs.nl/awiteb/n34.git"
keywords     = ["nostr", "NIP-34", "CLI"]
categories   = ["command-line-utilities"]
rust-version = "1.85.1"

[dependencies]
bitcoin_hashes = "0.16.0"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = [
  "tracing",
] }
convert_case = "0.8.0"
dirs = "6.0.0"
easy-ext = "1.0.2"
futures = "0.3.31"
nostr = { version = "0.42.0", features = ["parser", "nip05"] }
nostr-sdk = "0.42.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
