[package]
name         = "n34"
description  = "A CLI to interact with NIP-34 and other stuff related to code in Nostr"
version      = "0.3.0"
edition      = "2024"
license      = "GPL-3.0-or-later"
authors      = ["Awiteb <a@4rs.nl>"]
readme       = "README.md"
repository   = "https://git.4rs.nl/awiteb/n34.git"
keywords     = ["nostr", "NIP-34", "CLI"]
categories   = ["command-line-utilities"]
rust-version = "1.88.0"

[dependencies]
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
  "tracing",
] }
reqwest = { version = "0.12.22", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
] }

clap          = { version = "4.5.42", features = ["derive"] }
nostr         = { version = "0.43.0", default-features = false, features = ["std"] }
nostr-connect = { version = "0.43.0", default-features = false }
nostr-keyring = { version = "0.43.0", default-features = false }
nostr-sdk     = { version = "0.43.0", default-features = false }
serde         = { version = "1.0.219", features = ["derive"] }
tokio         = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

chrono             = "0.4.41"
convert_case       = "0.8.0"
dirs               = "6.0.0"
easy-ext           = "1.0.2"
either             = "1.15.0"
futures            = "0.3.31"
regex              = "1.11.1"
tempfile           = "3.20.0"
thiserror          = "2.0.12"
toml               = "0.9.4"
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto       = "fat"
opt-level = 3
